// Vitest Snapshot v1

exports[`command list > should contain all templates in store 1`] = `
"NEO v3.5.3 (​https://neo-docs.netlify.app​)

[log] Note: cached, uncached

[log] Found 6 templates:

[log] neo:
[log] @aiou/webext-template
bin-template#bundle
bin-template#unbundle
ts-lib-template (https://github.com/egoist/ts-lib-starter)
[log]
[log] demo:
[log] ts-lib-template (@aiou/ts-lib-template)
[log]
[log] Not in preset:
[log] react-template"
`;

exports[`command list > should show empty template list with wrong preset 1`] = `
"NEO v3.5.3 (​https://neo-docs.netlify.app​)

[log] No templates..."
`;

exports[`command list > should show template list filter by preset 1`] = `
"NEO v3.5.3 (​https://neo-docs.netlify.app​)

[log] Note: cached, uncached

[log] Found 4 templates:

[log] @aiou/webext-template
bin-template#bundle
bin-template#unbundle
ts-lib-template"
`;
